# prometheus-zfs-exporter

./: Cargo.toml  MAKE.md  Makefile  README.md  config-sample.toml
src/: config.rs  main.rs  options.rs  scraper.rs
